--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -1,11 +1,14 @@
 \vspace*{\fill}
 \begin{flushleft}
-Copyright (C) 2013 Howard Hughes Medical Institute.
+Copyright (C) 2016 Howard Hughes Medical Institute.
 
 \vspace{2em} 
 
-Easel's source code and documentation are freely redistributable and
-modifiable under the terms of the Janelia Farm Software License.
+Easel is open source.  Easel's source code and documentation are
+freely redistributable and modifiable under the terms of the Berkeley
+Software Distribution License (BSD 2 Clause;
+\url{https://opensource.org/licenses/BSD-2-Clause}).
+
 \end{flushleft}
 
 
