--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -10,84 +10,75 @@ databases. \Easel\ is also used by \Infernal\
 underlies the \Rfam\ RNA family database
 \citep{Griffiths-Jones05}. 
 
-\Easel\ is not meant to be comprehensive.  There are other libraries
-that aspire to comprehensiveness, in a variety of languages
-\citep{Vahrson96,Pitt01,Mangalam02,Butt05,Dutheil06,Giancarlo07,Doring08}.
-\Easel's functionality is for supporting what's needed in
-probabilistic modeling of biological sequences, in applications like
-\HMMER\ and \Infernal. It includes code for generative probabilistic
-models of sequences, phylogenetic models of evolution, bioinformatics
-tools for sequence manipulation and annotation, numerical computing,
-and some basic utilities.
+There are other biosequence analysis libraries out there, in a variety
+of languages
+\citep{Vahrson96,Pitt01,Mangalam02,Butt05,Dutheil06,Giancarlo07,Doring08};
+but this is ours.  \Easel\ is not meant to be comprehensive.  \Easel
+is for supporting what's needed in our group's work on probabilistic
+modeling of biological sequences, in applications like \HMMER\ and
+\Infernal. It includes code for generative probabilistic models of
+sequences, phylogenetic models of evolution, bioinformatics tools for
+sequence manipulation and annotation, numerical computing, and some
+basic utilities.
 
-\Easel\ is written in ANSI/ISO C because its primary goal is high
-performance. Secondarily, \Easel\ aims to provide an ease of use
-reasonably close to Perl or Python code. This is a somewhat different
-emphasis from biosequence libraries written in Perl or Python where
-ease-of-use is the primary goal, and where the library aims to provide
-performance reasonably close to C.
+\Easel\ is written in ANSI/ISO C because its primary goals are high
+performance and portability. Additionally, \Easel\ aims to provide an
+ease of use reasonably close to Perl or Python code.
 
-\Easel\ reflects some personal views about code reuse in research
-software development.  It is not intended to be a black box library
-that you just link to (though you may certainly use it that way;
-\HMMER\ and \Infernal\ do). I tend to only use black box libraries for
-routine functions that are tangential to my research. For routines
-that directly touch on my research, I want to see and control the
-relevant source code.  Idealistic views of code reuse and modularity
-clash with the desire for rigorous, paranoid control of confounding
-variables in research. No matter how much software engineers may
-complain, in reality it's not unnatural at all to treat reusing other
-people's code like using their toothbrush -- because god only knows
-what they've done to it. It's entirely natural in a research
-environment that people act like magpies, studying and stealing shiny
-bits of other people's source code to weave them into our own personal
-nest. \Easel\ is therefore written to be read, studied, and borrowed
-from, piecewise.
+\Easel\ is designed to be reused, but not only as a black box. I might
+use a black box library for routine functions that are tangential to
+my research, but for anything research-critical, I want to understand
+and control the source code.  It's rational to treat reusing other
+people's code like using their toothbrush, because god only knows what
+they've done to it. For me, code reuse more often means acting like a
+magpie, studying and stealing shiny bits of other people's source
+code, and weaving them into one's own nest. \Easel\ is designed so you
+can easily pull useful baubles from it.
 
-\Easel\ also reflects some personal views about publishing research
-results based on software engineering. The \Easel\ source code itself
-is intended to be supplementary material for our research papers,
-aiming to make our work reproducible and extensible by others.
-\Easel\ is therefore written and documented as carefully as any other
+\Easel\ is also designed to enable us to publish reproducible and
+extensible research results as supplementary material for our research
+papers. We put work into documenting \Easel\ as carefully as any other
 research data we distribute.
 
-These considerations dictate many \Easel design decisions.  \Easel's
-documentation includes tutorial examples to make it easy to understand
-any given \Easel\ module, independent of other parts of \Easel.
-\Easel\ is modular, in a way that helps you extract individual files
-or functions for use in your own code, without having to use (or
-disentangle) the entire library. \Easel\ uses some precepts of
-object-oriented design, but its objects are just C structures with
-visible, documented contents. The \Easel\ open source license allows
-you to freely modify and redistribute any part of it for any purpose,
-including commercial use. Finally, \Easel's source code is consciously
-designed to be read as a reference work. It reflects, in a modest way,
-the principles of ``literate programming'' espoused by Donald
+These considerations are reflected in \Easel design decisions.
+\Easel's documentation includes tutorial examples to make it easy to
+understand and get started using any given \Easel\ module, independent
+of other parts of \Easel.  \Easel\ is modular, in a way that should
+enable you to extract individual files or functions for use in your
+own code, with minimum disentanglement work. \Easel\ uses some
+precepts of object-oriented design, but its objects are just C
+structures with visible, documented contents. \Easel's source code is
+consciously designed to be read as a reference work. It reflects, in a
+modest way, principles of ``literate programming'' espoused by Donald
 Knuth. \Easel\ code and documentation are interwoven. Most of this
-book, in fact, has been automatically generated from \Easel's source
-code.
+book is automatically generated from \Easel's source code.
+
+
 
 \section{Quick start}
 
 Let's start with a quick tour. If you have any experience with the
 variable quality of bioinformatics software, the first thing you want
-to know is you can get Easel compiled -- ideally without having to
-install a million dependencies first. The next thing you'll want to
-know is whether \Easel\ is going to be useful to you or not. We'll
-start with compiling it. You can compile \Easel\ and try it out
-without permanently installing it.
+to know is you can get Easel compiled -- without having to install a
+million dependencies first. The next thing you'll want to know is
+whether \Easel\ is going to be useful to you or not. We'll start with
+compiling it. You can compile \Easel\ and try it out without
+permanently installing it.
 
-\subsection{Compiling Easel}
+
+
+\subsection{Downloading and compiling Easel for the first time}
 
 Easel is self-sufficient, with no dependencies other than what's
 already on your system, provided you have an ANSI C99 compiler
-installed.  After you obtain an \Easel\ source tarball
-\footnote{From \url{http://selab.janelia.org/easel}, for example.}, it
-should compile cleanly on any UNIX, Linux, or Mac OS/X operating
-system with this incantation (where \ccode{xxx} is a version number):
+installed.  You can obtain an \Easel\ source tarball and compile it
+cleanly on any UNIX, Linux, or Mac OS/X operating system with an
+incantation like the following (where \ccode{xxx} will be the current
+version number):
 
 \begin{cchunk}
-% tar zxf easel-xxx.tar.gz
+% wget http://eddylab.org/easel/easel.tar.gz
+% tar zxf easel.tar.gz
 % cd easel-xxx
 % ./configure
 % make
@@ -96,12 +87,17 @@ system with this incantation (where \ccode{xxx} is a version number):
 
 The \ccode{make check} command is optional. It runs a battery of
 quality control tests. All of these should pass. You should now see
-\ccode{libeasel.a} in the directory.
+\ccode{libeasel.a} in the directory. If you look in the directory
+\ccode{miniapps}, you'll also see a bunch of small utility programs,
+the \Easel\ ``miniapps''.
 
 There are more complicated things you can do to customize the
-\ccode{./configure} step for your needs. If you decide you want to
-install \Easel\ permanently, see the full installation instructions in
+\ccode{./configure} step for your needs. That includes customizing the
+installation locations. If you decide you want to install
+\Easel\ permanently, see the full installation instructions in
 chapter~\ref{chapter:installation}.
+
+
 
 \subsection{Cribbing from code examples}
 
