--- a/documentation/titlepage.tex
+++ b/documentation/titlepage.tex
@@ -12,16 +12,18 @@
 \vspace*{\fill}
 
 \begin{center}
-\url{http://selab.janelia.org/easel/}\\
-Version 0.2; February 2013 \\ 
+\url{http://bioeasel.org/}\\
+Version 0.3dev; February 2016 \\ 
 
 \vspace*{\fill}
 
 Sean R. Eddy\\
-HHMI Janelia Farm Research Campus\\
-19700 Helix Drive\\
-Ashburn VA 20147\\
-\url{http://selab.janelia.org/}\\
+HHMI/Harvard University\\
+Dept. of Molecular and Cellular Biology\\
+Biological Laboratories 1008B\\
+16 Divinity Avenue\\
+Cambridge, Massachusetts 02138\\
+\url{http://eddylab.org/}\\
 \end{center}
 
 \vspace*{\fill}
