--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -7,7 +7,7 @@
 \newcommand{\esldef}[1]{\textbf{#1}}                    % Define/introduce a term (to be indexed)
 \newcommand{\prog}[1]{{\smaller\textsc{#1}}}
 \newcommand{\eslmod}[1]{{\smaller\textsf{\textup{\textbf{#1}}}}}
-\newcommand{\eslmodincmd}[1]{{\textsf{\textup{\textbf{#1}}}}}
+\newcommand{\eslmodincmd}[1]{{\smaller\textsf{\textup{\textbf{#1}}}}}
 \newcommand{\user}[1]{\indent\indent{\small\bfseries\texttt{> #1}}}
 \newcommand{\response}[1]{\indent\indent{\small\texttt{#1}}}
 
