--- a/esl_dsqdata.tex
+++ b/esl_dsqdata.tex
@@ -288,9 +288,11 @@ residue codes:
 Packets without the sentinel bit set are full. They unpack to 15 or 6
 residues.
  
-5-bit EOD packets may be partial: they unpack to 1..6 residues. The
+5-bit EOD packets may be partial: they unpack to 0..6 residues. The
 remaining residue codes are set to 0x1f (11111), indicating EOD within
-the packet.
+the packet. The only case in which a partial EOD packet encodes 0
+residues is a zero-length sequence: there has to be at least one EOD
+packet.
 
 2-bit EOD packets must be full, because there is no way to signal EOD
 locally within a 2-bit packet. It can't use 0x03 (11), because that
@@ -302,9 +304,10 @@ the end of a 2-bit packet.\footnote{If we ever needed to pack an
   seems unlikely to ever happen, so I'm simply not going to include
   any code to read EOD 2-bit partial packets.}
 
-A protein sequence of length N packs into exactly $(N+5)/6$ 5-bit
-packets. A DNA sequence packs into $\leq (N+14)/15$ mixed 2- and 5-bit
-packets.
+A protein sequence of length $L$ packs into exactly P $= MAX(1,
+(L+5)/6)$ 5-bit packets. A DNA sequence packs into P $\leq MAX(1,
+(L+14)/15)$ mixed 2- and 5-bit packets. P $\geq 1$ because even a
+zero-length sequence ($L=0$) requires an EOD packet.
 
 A packed sequence consists of an integer number of packets, P, ending
 with an EOD packet.
