Adds esl_sse_hmax_epi8(); SSE now requires SSE4.1
Starting work on H4's SSV filter, which will depend on SSE4.1
instructions, so we can work with signed epi8/int8_t.  I think we can
get away with this. SSE4.1 has been around since 2007 on Intel (Penryn
processors), and since 2011 on AMD processors (Bulldozer). If we have
a problem, it will be on AMD; there are some modern AMD processors
(Bobcat) that do not have SSE4.1, but I think they should be
disappearing.

Vector configuration code (esl_sse.m4; esl_cpu.c) changed to check for
compile-time SSE4.1 support in order to define our eslENABLE_SSE flag,
and run-time support to pass our CPU dispatch check.

Added esl_sse_hmax_epi8(), horizontal 16-way int8_t max, using SSE4.1
_mm_max_epi8() instruction.

--- a/esl_sse.tex
+++ b/esl_sse.tex
@@ -4,9 +4,11 @@ the Intel/AMD SSE (Streaming SIMD Extensions) Intrinsics: most
 importantly, vectorized \ccode{logf()} and \ccode{expf()} routines.
 
 The \eslmod{sse} module is only available on platforms that support
-SSE2 instructions. This includes all modern Intel and AMD processors,
-but nor PowerPC processors. By default, the Easel configure script
-enables SSE if it is available on the compilation machine.
+SSE, SSE2, and SSE4.1 instructions. This includes all modern Intel and
+AMD processors (since Intel Penryn in 2007, and AMD Bulldozer, Jaguar,
+and Piledriver processors since 2011), but not PowerPC processors. By
+default, the Easel configure script enables SSE if it is available on
+the compilation machine.
 
 
 \begin{table}[hbp]
