Completes split of esl_dirichlet into esl_dirichlet + esl_mixdchlet.
Insulates mixdchlet's utest_fit() test from normal stochastic
failures.  RNG seed 14 chosen both because it works, and because it's
unusually fast (~3 sec instead of 5-10). <allow_badluck> option
overrides the fixed seed.

Removes cruft from esl_mixdchlet : tests I had disabled, during
my split of esl_dirichlet into _dirichlet + _mixdchlet.

Removes esl_mixdchlet examples; decided they're currently irrelevant,
better to reinstate them later with more relevant code when
opportunity arises.

Adds draft of esl_mixdchlet_experiment driver, for estimating a
mixture Dirichlet prior from a counts data file.

esl_mixdchlet_Parameterize() name changed back to _MPParameters().
Parameterize() sounds too much like parameterizing the _prior_, not
estimation of probs from counts.

Adds esl_mat_DGrowTo() for reallocation of a simple 2D matrix of
doubles. (F, I versions likely to follow eventually.)

esl_mat_{DFI}Destroy() doesn't need an M argument; removed.

Updates codestyle.tex: based on esl_mixdchlet, new recommendation for
dealing with unit tests that can have normal stochastic failures, and
therefore need a specific fixed RNG seed in default public-facing
tests. Previously, entire test driver used fixed seed while sharing
the RNG, which means that all other utests had to use the fixed seed,
and the other utests could affect each other.  Now, make the RNG
seeding utest-specific.  Such utests should Reinit() the RNG to their
desire, and they should come last, after other utests that don't need
a fixed seed.

--- a/documentation/codestyle.tex
+++ b/documentation/codestyle.tex
@@ -1406,42 +1406,42 @@ Every function, procedure, and macro in the exposed API shall be
 tested by one or more unit tests. The unit tests aim for complete code
 coverage. This is measured by code coverage tests using \ccode{gcov}.
 
-Write unit tests. Remember that the purpose isn't so much to test
-whether your code works; the purpose is to test whether your code
-\emph{still} works, months or years from now when someone who didn't
-take the time to understand it fully has to make modifications. If
-that someone breaks your code and the unit tests fail, they know they
-need to do more. If someone breaks your code and the unit tests don't
-help them notice, it's your fault as much as theirs.
 
 
 %%%%%%%%%%%%%%%%
-\subsection{Using statistical sampling or randomization in unit tests}
+\subsection{Dealing with expected stochastic failures in unit tests}
 %%%%%%%%%%%%%%%%
-% First instituted in stats: SRE, Sun May 27 09:31:12 2007
 
-Some routines are tested on statistical samples. For example, we test
-a maximum likelihood parameter fitting routine by fitting to samples
-generated with known parameters, and testing that the estimated
-parameters are close enough to the true parameters.  The trouble is
-defining ``close enough''. There is always a finite probability that
-such a test will fail. We don't want tests to fail due to expected
+Many unit tests are based on statistical samples and/or random number
+generation.  For example, we test a maximum likelihood parameter
+fitting routine by fitting to samples generated with known parameters,
+and testing that the estimated parameters are close enough to the true
+parameters.  The trouble is defining ``close enough''. There may be a
+small but finite probability that such a test will fail. I call these
+``stochastic failures''.  We don't want tests to fail due to expected
 statistical deviations, but neither do we want to set p-values so
 loose that a flaw escapes notice.
 
-Easel tests drivers that use statistical sampling assign a
-\emph{fixed} random number seed by default, to make the statistical
-sample invariant across runs. This makes statistical tests more like
-regression tests. Manually, we use the test driver to determine that
-the test passes; in subsequent automatic use, we just check that we
-get the same answer.
+Current Easel strategy is to have such unit tests reinitialize the RNG
+to a predetermined fixed seed known to work. Optionally, the test can
+be made to use the RNG without reinitialization (therefore allowing
+stochastic failures to occur), with a \ccode{-x} option to the test
+driver. 
+% example: esl_mixdchlet
 
-To facilitate the manual testing phase, these test drivers often take
-optional arguments. A \ccode{-v} option toggles verbose mode, so unit
-tests display internal information. A \ccode{-r} option toggles
-``random'' mode, seeding the random number generator with the current
-time. A \ccode{-s <n>} option sets the random number seed to
-\ccode{<n>}.
+In the test driver, these unit tests need to be run last; unit tests
+that don't have a stochastic failure mode are run first. This is so
+the \ccode{-s <seed>} option for setting the RNG seed takes effect
+properly. (Otherwise, having a unit test reset the RNG seed would
+override the \ccode{-s <seed>} setting.}
+
+Otherwise the default for \ccode{<seed>} should be 0, so all other
+tests are randomized from run to run.
+
+In some older Easel code, fixed RNG seeds are used for tests that can
+stochastically fail. The newer approach is preferable because it gives
+more fine-grained control - only some utests need to deal with
+stochastic failure, not all of them.
 
 %%%%%%%%%%%%%%%%
 \subsection{Using temporary files in unit tests}
